// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyDetectorMessage /> spec Empty results renders component with empty message 1`] = `
<div
  class="euiEmptyPrompt"
  style="max-width: 45em;"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          Anomaly detectors take an input of information and discover patterns of anomalies. Create an anomaly detector to get started.
        </p>
      </div>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <a
    class="euiButton euiButton--primary euiButton--fill"
    data-test-subj="add_detector"
    href="opendistro-anomaly-detection#/create-ad"
  >
    <span
      class="euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        Create detector
      </span>
    </span>
  </a>
</div>
`;

exports[`<EmptyDetectorMessage /> spec Filters results message renders component no result for filters message 1`] = `
<div
  class="euiEmptyPrompt"
  style="max-width: 45em;"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          There are no detectors matching your applied filters. Reset your filters to view all detectors.
        </p>
      </div>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <button
    class="euiButton euiButton--primary euiButton--fill"
    data-test-subj="reset_list_filters"
    type="button"
  >
    <span
      class="euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        Reset filters
      </span>
    </span>
  </button>
</div>
`;
